--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,8 @@
                 <TextView
                     android:id="@+id/cust_logo_txt"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:layout_gravity="center_vertical"
                     android:text="@string/cust_cmp_name"
                     android:textColor="@color/lable"
