--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -125,17 +125,15 @@
                         </android.support.v7.widget.CardView>
                     </LinearLayout>
 
-                    <ScrollView
-                        android:id="@+id/tip_bg"
-                        android:layout_width="270dp"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginRight="10dp"
                         android:background="@drawable/text_bg">
 
                         <LinearLayout
                             android:layout_width="270dp"
                             android:layout_height="match_parent"
-                            android:layout_marginRight="15dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -146,12 +144,30 @@
                                 android:textColor="#000000"
                                 android:textSize="20dp" />
 
-                            <TextView
-                                android:id="@+id/msg_text"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                            <ScrollView
+                                android:id="@+id/tip_bg"
+                                android:layout_width="270dp"
+                                android:layout_height="wrap_content">
+
+                                <LinearLayout
+                                    android:layout_width="270dp"
+                                    android:layout_height="match_parent"
+                                    android:orientation="vertical"
+                                    android:weightSum="1">
+
+                                    <TextView
+                                        android:id="@+id/msg_text"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        />
+
+                                    <FrameLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="130dp"></FrameLayout>
+                                </LinearLayout>
+                            </ScrollView>
                         </LinearLayout>
-                    </ScrollView>
+                    </LinearLayout>
                 </LinearLayout>
                 <!--第二行-->
                 <LinearLayout
