--- a/app/src/main/res/layout/activity_re_set_server_ip.xml
+++ b/app/src/main/res/layout/activity_re_set_server_ip.xml
@@ -1,9 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="600dp"
+    android:layout_height="500dp"
+    android:orientation="vertical"
+    android:background="@android:color/white"
     tools:context="com.ruiduoyi.activity.Dialog.ReSetServerIpActivity">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/blue_sl_false">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="重设服务器地址"
+            android:textColor="@android:color/white"
+            android:textSize="30dp" />
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+        <LinearLayout
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <TextView
+                android:textColor="@android:color/black"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="16dp"
+                android:text="服务器地址："/>
+            <EditText
+                android:hint="http://192.168.1.39:8080"
+                android:id="@+id/service_id"
+                android:layout_width="300dp"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/ok_btn"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="确定"
+            android:textSize="18dp"/>
+        <Button
+            android:id="@+id/exit_btn"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="退出程序"
+            android:textSize="18dp"/>
+
+    </LinearLayout>
+</LinearLayout>
