--- a/app/src/main/res/layout/activity_re_set_server_ip.xml
+++ b/app/src/main/res/layout/activity_re_set_server_ip.xml
@@ -21,6 +21,7 @@
             android:textSize="30dp" />
     </FrameLayout>
     <FrameLayout
+        android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
