--- a/app/src/main/res/layout/list_item_jtjqsbg1.xml
+++ b/app/src/main/res/layout/list_item_jtjqsbg1.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="1274dp"
+    android:layout_width="1608dp"
     android:layout_height="70dp">
     <LinearLayout
         android:id="@+id/bg"
-        android:layout_width="1480dp"
+        android:layout_width="1608dp"
         android:layout_height="60dp"
         android:orientation="horizontal">
         <LinearLayout
@@ -17,9 +17,23 @@
             >
             <Button
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:text="选择"
-                android:id="@+id/on_btn"/>
+                android:layout_height="60dp"
+                android:text="模穴变更"
+                android:id="@+id/mxbg_btn"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="@drawable/text_bg"
+            android:gravity="center"
+            android:layout_width="128dp"
+            android:layout_height="match_parent"
+            android:textColor="@android:color/black"
+            >
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="机台变更"
+                android:id="@+id/jtbg_btn"/>
         </LinearLayout>
 
         <TextView
