--- a/app/src/main/res/layout/activity_dialog_jtbg.xml
+++ b/app/src/main/res/layout/activity_dialog_jtbg.xml
@@ -30,6 +30,7 @@
     </FrameLayout>
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal">
@@ -72,6 +73,7 @@
         android:divider="@color/touming"></ListView>
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
