--- a/app/src/main/res/layout/activity_oee.xml
+++ b/app/src/main/res/layout/activity_oee.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_9"
+    android:background="@color/fragment_bg"
     tools:context="com.ruiduoyi.activity.OeeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_9"
+        android:background="@color/fragment_bg"
         android:orientation="vertical">
 
         <FrameLayout
@@ -35,74 +35,82 @@
                 android:textSize="30dp" />
         </FrameLayout>
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_9">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="【时间片分析】"
-                android:textColor="@android:color/black"
-                android:textSize="18dp" />
-        </LinearLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.github.mikephil.charting.charts.HorizontalBarChart
-                android:id="@+id/h_barchart"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"></com.github.mikephil.charting.charts.HorizontalBarChart>
-
+            app:cardBackgroundColor="@color/lable"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp">
             <LinearLayout
-                android:layout_width="400dp"
-                android:layout_height="15dp"
-                android:layout_gravity="bottom|left"
-                android:background="@color/color_9"></LinearLayout>
-        </FrameLayout>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="【时间片分析】"
+                    android:textColor="@android:color/black"
+                    android:textSize="18dp" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.github.mikephil.charting.charts.HorizontalBarChart
+                        android:id="@+id/h_barchart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"></com.github.mikephil.charting.charts.HorizontalBarChart>
+                </FrameLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/color_9"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="【设备效率分析】"
-                    android:textColor="@android:color/black"
-                    android:textSize="18dp" />
-
-                <FrameLayout
+                app:cardElevation="5dp"
+                app:cardCornerRadius="5dp"
+                app:cardBackgroundColor="@color/lable"
+                android:layout_margin="10dp">
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/color_9">
+                    android:orientation="vertical">
 
-                    <com.github.mikephil.charting.charts.PieChart
-                        android:id="@+id/p_chart"
-                        android:layout_width="350dp"
-                        android:layout_height="350dp"
-                        android:layout_gravity="center"></com.github.mikephil.charting.charts.PieChart>
-                </FrameLayout>
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="【设备效率分析】"
+                        android:textColor="@android:color/black"
+                        android:textSize="18dp" />
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        >
+
+                        <com.github.mikephil.charting.charts.PieChart
+                            android:id="@+id/p_chart"
+                            android:layout_width="350dp"
+                            android:layout_height="350dp"
+                            android:layout_gravity="center"></com.github.mikephil.charting.charts.PieChart>
+                    </FrameLayout>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/color_9"
+                android:background="@color/fragment_bg"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -153,6 +161,8 @@
                         android:textColor="@android:color/black" />
                 </LinearLayout>
                 <ListView
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/text_bg"
                     android:layout_width="800dp"
                     android:layout_height="match_parent"
                     android:id="@+id/list_oee"
