--- a/app/src/main/res/layout/activity_oee.xml
+++ b/app/src/main/res/layout/activity_oee.xml
@@ -79,7 +79,9 @@
                 app:cardElevation="5dp"
                 app:cardCornerRadius="5dp"
                 app:cardBackgroundColor="@color/lable"
-                android:layout_margin="10dp">
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                >
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
