--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -39,7 +39,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl50"
+                        android:id="@+id/hm"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -60,7 +60,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl51"
+                        android:id="@+id/tiaoji"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -82,7 +82,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl52"
+                        android:id="@+id/hs"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -103,7 +103,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl53"
+                        android:id="@+id/sj"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -124,7 +124,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl54"
+                        android:id="@+id/pzyc"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -145,7 +145,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl55"
+                        android:id="@+id/xm"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -165,7 +165,7 @@
                     android:layout_width="wrap_content"
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
-                        android:id="@+id/zl56"
+                        android:id="@+id/jtwx"
                         app:cardBackgroundColor="#bfd999"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
@@ -190,7 +190,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl57"
+                        android:id="@+id/tingji"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -211,7 +211,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl58"
+                        android:id="@+id/dl"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -232,7 +232,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl60"
+                        android:id="@+id/sm"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -253,7 +253,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl61"
+                        android:id="@+id/hl"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -274,7 +274,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl62"
+                        android:id="@+id/by"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -295,7 +295,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl63"
+                        android:id="@+id/dr"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -315,7 +315,7 @@
                     android:layout_width="wrap_content"
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
-                        android:id="@+id/zl64"
+                        android:id="@+id/jhtj"
                         app:cardBackgroundColor="#bfd999"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
@@ -340,7 +340,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl65"
+                        android:id="@+id/gdzt"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -356,13 +356,12 @@
                     </android.support.v7.widget.CardView>
                 </FrameLayout>
                 <FrameLayout
-                    android:visibility="invisible"
                     android:layout_height="90dp"
                     android:layout_width="wrap_content"
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="#bfd999"
-                        android:id="@+id/zl66"
+                        android:id="@+id/ts"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
@@ -372,7 +371,7 @@
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/zlmc_66"
+                            android:text="@string/zlmc_67"
                             android:textColor="#000000"
                             android:textSize="24dp"/>
                     </android.support.v7.widget.CardView>
@@ -426,7 +425,7 @@
                     android:layout_width="wrap_content"
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
-                        android:id="@+id/zlx"
+                        android:id="@+id/rysg"
                         app:cardBackgroundColor="#bfd999"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
@@ -469,7 +468,7 @@
                     android:layout_weight="1">
                     <android.support.v7.widget.CardView
                         app:cardBackgroundColor="@android:color/holo_red_dark"
-                        android:id="@+id/zlF3"
+                        android:id="@+id/js"
                         android:layout_gravity="center"
                         android:layout_width="@dimen/status_btn_width"
                         android:layout_height="@dimen/status_btn_height"
