--- a/app/src/main/res/layout/activity_oee.xml
+++ b/app/src/main/res/layout/activity_oee.xml
@@ -110,6 +110,7 @@
             </android.support.v7.widget.CardView>
 
             <LinearLayout
+                android:layout_marginRight="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@color/fragment_bg"
