--- a/app/src/main/res/layout/list_item_oee.xml
+++ b/app/src/main/res/layout/list_item_oee.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:id="@+id/bg"
         android:layout_width="800dp"
         android:layout_height="35dp"
         android:layout_gravity="center_horizontal"
-        android:background="@color/color_9"
         android:orientation="horizontal">
 
         <TextView
