--- a/app/src/main/res/layout/fragment_yyfx.xml
+++ b/app/src/main/res/layout/fragment_yyfx.xml
@@ -70,9 +70,11 @@
     </LinearLayout>
 
     <ListView
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/text_bg"
         android:id="@+id/list_bl"
         android:divider="@color/touming"
-        android:layout_width="match_parent"
+        android:layout_width="710dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:choiceMode="singleChoice"></ListView>
