--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -172,84 +172,92 @@
                 <!--第二行-->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <!--操作员-->
+                    android:layout_height="250dp"
+                    android:orientation="vertical">
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/caozuo"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="【操作员】"
-                            android:textColor="#000000"
-                            android:textSize="20dp" />
-
-                        <ImageView
-                            android:id="@+id/photo_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:orientation="horizontal">
+                        <!--操作员-->
+                        <LinearLayout
                             android:layout_width="150dp"
-                            android:layout_height="180dp"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/text_bg"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/a_img" />
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="100dp"
+                            android:layout_marginTop="10dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/caozuo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="【操作员】"
+                                android:textColor="#000000"
+                                android:textSize="20dp" />
+
+                            <ImageView
+                                android:id="@+id/photo_1"
+                                android:layout_width="150dp"
+                                android:layout_height="180dp"
+                                android:layout_gravity="center_horizontal"
+                                android:background="@drawable/text_bg"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/a_img" />
+
+                            <TextView
+                                android:id="@+id/cao_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal"
+                                android:text="操作员"
+                                android:textColor="#000000"
+                                android:textSize="20dp"
+                                />
+                        </LinearLayout>
 
                         <TextView
-                            android:id="@+id/cao_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="操作员"
-                            android:textColor="#000000"
-                            android:textSize="20dp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/labRym"
-                        android:layout_width="80dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="20dp"
-                        android:gravity="center_vertical"
-                        android:textSize="15dp" />
-                    <!--技术员-->
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/jisu"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="【技术员】"
-                            android:textColor="#000000"
-                            android:textSize="20dp" />
-
-                        <ImageView
-                            android:id="@+id/photo_2"
+                            android:id="@+id/labRym"
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:gravity="center_vertical"
+                            android:textSize="15dp" />
+                        <!--技术员-->
+                        <LinearLayout
                             android:layout_width="150dp"
-                            android:layout_height="180dp"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/text_bg"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/b_img" />
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/ji_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:text="技术员"
-                            android:textColor="#000000"
-                            android:textSize="20dp" />
+                            <TextView
+                                android:id="@+id/jisu"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="【技术员】"
+                                android:textColor="#000000"
+                                android:textSize="20dp" />
+
+                            <ImageView
+                                android:id="@+id/photo_2"
+                                android:layout_width="150dp"
+                                android:layout_height="180dp"
+                                android:layout_gravity="center_horizontal"
+                                android:background="@drawable/text_bg"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/b_img" />
+
+                            <TextView
+                                android:id="@+id/ji_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal"
+                                android:text="技术员"
+                                android:textColor="#000000"
+                                android:textSize="20dp"
+                                />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
 
