--- a/app/src/main/res/layout/list_item_b4_1.xml
+++ b/app/src/main/res/layout/list_item_b4_1.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/lab_1"
@@ -31,7 +31,7 @@
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="115dp"
+            android:layout_width="@dimen/b4_lable"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_4"/>
@@ -72,24 +72,17 @@
             android:id="@+id/lab_9"/>
         <TextView
             android:background="@drawable/text_bg"
-            android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:gravity="center_vertical"
+            android:layout_width="135dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_10"/>
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="135dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_11"/>
-        <TextView
-            android:background="@drawable/text_bg"
-            android:gravity="center"
-            android:layout_width="95dp"
-            android:layout_height="match_parent"
-            android:textColor="@android:color/black"
-            android:id="@+id/lab_12"/>
     </LinearLayout>
 </LinearLayout>
