--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,16 @@
     <color name="color_8">#81a6d7</color>
     <color name="color_9">#8d8c92</color>
     <color name="color_10">#FF4081</color>
+    <color name="color_11">#f5b96c</color>
+    <color name="color_12">#c3fa04</color>
+    <color name="color_13">#04fab2</color>
+    <color name="color_14">#0489fa</color>
+    <color name="color_15">#8304fa</color>
+    <color name="color_16">#fa04da</color>
+    <color name="color_17">#6d0239</color>
+    <color name="color_18">#655b60</color>
+    <color name="color_19">#0b3171</color>
+    <color name="color_20">#877521</color>
     <color name="large">#99ff99</color>
     <color name="small">#ff9999</color>
     <color name="lightgray">#d3d3d3</color>
