--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -172,18 +172,18 @@
                 <!--第二行-->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="255dp"
                     android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="255dp"
                         android:orientation="horizontal">
                         <!--操作员-->
                         <LinearLayout
                             android:layout_width="150dp"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="100dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -198,7 +198,7 @@
                             <ImageView
                                 android:id="@+id/photo_1"
                                 android:layout_width="150dp"
-                                android:layout_height="180dp"
+                                android:layout_height="170dp"
                                 android:layout_gravity="center_horizontal"
                                 android:background="@drawable/text_bg"
                                 android:scaleType="fitXY"
@@ -212,6 +212,15 @@
                                 android:text="操作员"
                                 android:textColor="#000000"
                                 android:textSize="20dp"
+                                />
+                            <TextView
+                                android:id="@+id/cao_phone"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal"
+                                android:text=""
+                                android:textColor="#000000"
+                                android:textSize="18dp"
                                 />
                         </LinearLayout>
 
@@ -227,7 +236,7 @@
                         <LinearLayout
                             android:layout_width="150dp"
                             android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="5dp"
                             android:orientation="vertical">
 
                             <TextView
@@ -242,7 +251,7 @@
                             <ImageView
                                 android:id="@+id/photo_2"
                                 android:layout_width="150dp"
-                                android:layout_height="180dp"
+                                android:layout_height="170dp"
                                 android:layout_gravity="center_horizontal"
                                 android:background="@drawable/text_bg"
                                 android:scaleType="fitXY"
@@ -256,6 +265,15 @@
                                 android:text="技术员"
                                 android:textColor="#000000"
                                 android:textSize="20dp"
+                                />
+                            <TextView
+                                android:id="@+id/ji_phone"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal"
+                                android:text=""
+                                android:textColor="#000000"
+                                android:textSize="18dp"
                                 />
                         </LinearLayout>
                     </LinearLayout>
