--- a/app/src/main/res/layout/list_item_b4_1.xml
+++ b/app/src/main/res/layout/list_item_b4_1.xml
@@ -3,35 +3,36 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="1225dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/lab_1"
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="85dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             />
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="85dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_2"/>
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="75dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_3"/>
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="85dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_4"/>
@@ -52,21 +53,21 @@
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="85dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_7"/>
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="65dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_8"/>
         <TextView
             android:background="@drawable/text_bg"
             android:gravity="center"
-            android:layout_width="@dimen/b4_lable"
+            android:layout_width="65dp"
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_9"/>
@@ -84,5 +85,23 @@
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_11"/>
+        <TextView
+            android:id="@+id/lab_13"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/text_bg"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/lab_12"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/text_bg"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@android:color/black" />
+
     </LinearLayout>
 </LinearLayout>
