--- a/app/src/main/res/layout/list_item_b3.xml
+++ b/app/src/main/res/layout/list_item_b3.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:id="@+id/bg"
         android:layout_gravity="center_horizontal"
-        android:layout_width="1638dp"
+        android:layout_width="1344dp"
         android:layout_height="60dp"
         android:orientation="horizontal">
         <LinearLayout
@@ -32,7 +32,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:text="暂停"
+                android:text="模具更换"
                 android:id="@+id/off_btn"/>
         </LinearLayout>
         <TextView
@@ -105,19 +105,5 @@
             android:layout_height="match_parent"
             android:textColor="@android:color/black"
             android:id="@+id/lab_15"/>
-        <TextView
-            android:background="@drawable/text_bg"
-            android:gravity="center"
-            android:layout_width="@dimen/b3_lable"
-            android:layout_height="match_parent"
-            android:textColor="@android:color/black"
-            android:id="@+id/lab_9"/>
-        <TextView
-            android:background="@drawable/text_bg"
-            android:gravity="center"
-            android:layout_width="196dp"
-            android:layout_height="match_parent"
-            android:textColor="@android:color/black"
-            android:id="@+id/lab_10"/>
     </LinearLayout>
 </LinearLayout>
