--- a/app/src/main/res/layout/popupwindow_spinner.xml
+++ b/app/src/main/res/layout/popupwindow_spinner.xml
@@ -14,6 +14,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:divider="@color/touming"
             android:id="@+id/pwspinner"></ListView>
     </android.support.v7.widget.CardView>
 </LinearLayout>
